@@ -166,7 +166,7 @@ class WEBrick::TestFileHandler < Test::Unit::TestCase
   def test_non_disclosure_name
     config = { :DocumentRoot => File.dirname(__FILE__), }
     log_tester = lambda {|log, access_log|
-      log = log.reject {|s| /ERROR `.*' not found\./ =~ s }
+      log = log.reject {|s| /ERROR `.*\' not found\./ =~ s }
       log = log.reject {|s| /WARN  the request refers nondisclosure name/ =~ s }
       assert_equal([], log)
     }
@@ -193,10 +193,12 @@ class WEBrick::TestFileHandler < Test::Unit::TestCase
   end
 
   def test_directory_traversal
+    return if File.executable?(__FILE__) # skip on strange file system
+
     config = { :DocumentRoot => File.dirname(__FILE__), }
     log_tester = lambda {|log, access_log|
       log = log.reject {|s| /ERROR bad URI/ =~ s }
-      log = log.reject {|s| /ERROR `.*' not found\./ =~ s }
+      log = log.reject {|s| /ERROR `.*\' not found\./ =~ s }
       assert_equal([], log)
     }
     TestWEBrick.start_httpserver(config, log_tester) do |server, addr, port, log|
@@ -222,13 +224,15 @@ class WEBrick::TestFileHandler < Test::Unit::TestCase
   end
 
   def test_short_filename
+    return if File.executable?(__FILE__) # skip on strange file system
+
     config = {
       :CGIInterpreter => TestWEBrick::RubyBin,
       :DocumentRoot => File.dirname(__FILE__),
       :CGIPathEnv => ENV['PATH'],
     }
     log_tester = lambda {|log, access_log|
-      log = log.reject {|s| /ERROR `.*' not found\./ =~ s }
+      log = log.reject {|s| /ERROR `.*\' not found\./ =~ s }
       log = log.reject {|s| /WARN  the request refers nondisclosure name/ =~ s }
       assert_equal([], log)
     }
@@ -262,6 +266,8 @@ class WEBrick::TestFileHandler < Test::Unit::TestCase
   end
 
   def test_script_disclosure
+    return if File.executable?(__FILE__) # skip on strange file system
+
     config = {
       :CGIInterpreter => TestWEBrick::RubyBin,
       :DocumentRoot => File.dirname(__FILE__),
@@ -276,7 +282,7 @@ class WEBrick::TestFileHandler < Test::Unit::TestCase
       },
     }
     log_tester = lambda {|log, access_log|
-      log = log.reject {|s| /ERROR `.*' not found\./ =~ s }
+      log = log.reject {|s| /ERROR `.*\' not found\./ =~ s }
       assert_equal([], log)
     }
     TestWEBrick.start_httpserver(config, log_tester) do |server, addr, port, log|
